Replace univocity-parsers with FastCSV (#4606)
The implementation of `@CsvSource` and `@CsvFileSource` was migrated
from the no longer maintained univocity-parsers library to FastCSV.
This improves the consistency of CSV input handling, including for
malformed entries, and provides better error reporting and overall
performance.

Resolves #4339.

---------

Co-authored-by: Marc Philipp <mail@marcphilipp.de>